# bevy-procedural-animated-crab

./: Cargo.toml  README.MD
assets/crab/: crab.gltf  crab_final.gltf  license.txt
src/: components.rs  ik_systems.rs  input_controller.rs  main.rs  systems.rs
