[package]
name = "bevy-procedural-animated-spider"
version = "0.1.1"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9", features=["jpeg"] }
#bevy_rapier3d = "0.19.0"
bevy_rapier3d = { version = "0.19.0", features = [ "simd-stable", "debug-render" ] }
bevy-inspector-egui = "0.14.0"
bevy_mod_picking = "0.10.0"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
bevy_obj ="0.9.1"
bevy_mod_inverse_kinematics = "0.2.0"
bevy_tweening = "0.6"
bevy_mod_wanderlust =  { version = "0.2.3", path = "../bevy_mod_wanderlust" }
bevy_infinite_grid =  { version = "0.5.2", path = "../bevy_infinite_grid" }
interpolation = "0.2.0"