[package]
name = "bevy-procedural-animated-crab"
version = "0.2.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9", features=["jpeg"] }
bevy_rapier3d = { version = "0.19.0", features = [ "simd-stable", "debug-render", "dim3" ] }
bevy-inspector-egui = "0.15.0"
bevy_mod_picking = "0.11.0"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_obj ="0.9.1"
bevy_mod_inverse_kinematics = { path = "./crates/bevy_mod_inverse_kinematics" }
bevy_tweening = "0.6"
interpolation = "0.2.0"
rand = "0.8.4"